# ani_ext

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py  setup.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
ani2x_ext/: __init__.py  custom_emsemble_ani2x_ext.py
ani_ext/: cli.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: 0106pro.sdf  0106pro.xyz  0106pro_scan.sdf  ani2x_ext_ase_opt_TorsionNet500.py  ani2x_ext_ase_torsionscan.py  ase_ani2x_min_md_sample.py  ase_min_md_sample.py  calc_ani2x_ext_eng_std_xyz.py  opt.traj  prepare_torscan_sdf_from_xyz.py
tests/: __init__.py  test_ani_ext.py
