[metadata]
name = ani2x_ext
author = 'Ping Lin'
author_email = plin1112@ufl.edu
description = Interface to new ANI models
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/plin1112/ani_ext 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ani2x_ext
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = ani2x_ext
